--- a/static/styles.css
+++ b/static/styles.css
@@ -22,8 +22,12 @@ canvas {
   color: red;
 }
 
-.btn-yellow{
+.btn-yellow {
   color: #212529;
   background-color: #fff808;
   border-color: #fff808;
+}
+
+#console {
+  margin: 0px 10px;
 }
